# GraphEx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Data/: CMakeLists.txt
Dependencies/: CMakeLists.txt
Shaders/: CMakeLists.txt  GraphEx.slang
Shaders/GraphEx/: RenderAnchorPoint.ps.slang  RenderAnchorPoint.vs.slang  RenderBoundingBox.ps.slang  RenderBoundingBox.vs.slang  Types.slang
Source/: CMakeLists.txt
Source/GraphEx/: Application.cpp  Application.h  CMakeLists.txt  GraphEx.cpp  GraphEx.h
Source/GraphEx/API/: Event.h  EventManager.cpp  EventManager.h  Module.h  ModuleRegistry.cpp  ModuleRegistry.h
Source/GraphEx/Core/: CameraManager.cpp  CameraManager.h  CoreEvents.cpp  CoreEvents.h  CoreTypes.cpp  CoreTypes.h  RenderManager.cpp  RenderManager.h  RenderModule.cpp  RenderModule.h  SceneManager.cpp  SceneManager.h
Source/GraphEx/Serialization/: SerializableTypeRegistry.h  Serialization.h
Source/GraphEx/Serialization/Internal/: CameraSerialization.h  ModuleSerialization.h  ReferenceSerialization.h  SerializationMacros.h  SerializationManager.cpp  SerializationManager.h  SerializationTemplates.h  VectorSerialization.h
Source/GraphEx/UI/: UI.cpp  UI.h  UIHelpers.cpp  UIHelpers.h
Source/GraphEx/Utils/: DispatchManager.cpp  DispatchManager.h  GlobalLocalProperty.cpp  GlobalLocalProperty.h  ProgramContext.cpp  ProgramContext.h  ProgramWrapper.cpp  ProgramWrapper.h  Standard.h
Tests/: CMakeLists.txt
Tests/GraphEx/: CMakeLists.txt  GraphExTests.cpp  GraphExTests.h  TestApplication.cpp  TestDispatchManager.cpp  TestEventManager.cpp  TestGlobalLocalProperty.cpp  TestModuleContainer.cpp  TestModuleDependencies.cpp  TestModuleRegistry.cpp  TestModuleSerialization.cpp
