# You may add your sources in the directory of this CMakeLists.txt file, or in a subdirectory
# Using subdirectories is recommended
# Add a CMakeLists.txt file in your subdirectory and add your sources there by using
# target_sources(<your-executable-name> ...)
# An example usage of this can be seen in ./GraphEx/CMakeLists.txt


# Add framework
add_subdirectory(GraphEx)

# Add your programs' subdirectories here
