# You may add your tests in the directory of this CMakeLists.txt file, or in a subdirectory
# Using subdirectories is recommended
# To add individual test files to your test suite, use target_sources(<test_suite_name> PRIVATE ...)
# It is recommended to also group tests in the "Tests" folder using graphex_target_source_group
# An example usage of this can be seen in ./GraphEx/CMakeLists.txt

# Framework tests
add_subdirectory(GraphEx)

# Add your program unit tests folder here
